--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "vue-i18n": "^8.15.3",
         "vue-router": "^3.1.5",
         "vuex": "^3.1.2"
     }
